--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 				 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.dema</groupId>
-	<artifactId>maven-jtidy-formatter-plugin</artifactId>
+	<artifactId>jtidy-formatter-maven-plugin</artifactId>
 	<packaging>maven-plugin</packaging>
 	<version>1.0-SNAPSHOT</version>
 	<name>maven-jtidy-formatter-plugin</name>
@@ -18,5 +18,17 @@
 			<artifactId>jtidy</artifactId>
 			<version>r938</version>
 		</dependency>
+	 <dependency>
+	  <groupId>org.apache.maven</groupId>
+	  <artifactId>maven-core</artifactId>
+	  <version>3.0.4</version>
+	  <type>jar</type>
+	 </dependency>
+	 <dependency>
+	  <groupId>org.codehaus.plexus</groupId>
+	  <artifactId>plexus-utils</artifactId>
+	  <version>3.0.8</version>
+	  <type>jar</type>
+	 </dependency>
 	</dependencies>
 </project>
